# instamine

./: .gitignore  README.md
gui/: .electron-builder.yml.un~  .eslintrc  .gitignore  .package.json.un~  README.md  build_proto.bat  config.txt  electron-builder.yml  electron-builder.yml~  pack.bat  package.json  package.json~
gui/app/: .config.txt.un~  1516309300577.webm  1516314412112.webm  app.js  client_test.js  config.js  config.txt~  config_nvidia.js  index.html  main.js  miner.js  routes.js  sagas.js  store.js  styles.css  theme.js  utils.js
gui/app/actions/: miner.js
gui/app/components/: EventTable.js  Graph.js  Header.js  Home.js  MinerItem.js  MinerMenu.js  Settings.js  Statistics.js
gui/app/components/settings/: MoneroCPUSettings.js  MoneroNVIDIASettings.js  SystemInformation.js  SystemInformationCPU.js  renderField.js
gui/app/components/settings/MoneroCPU/: CompleteForm.js  CurrentSettings.js  Form.js  MoneroCPUSettingsThreads.js  MoneroCPUSettingsWalletAddress.js  MoneroCPUSettingsWizardFirstPage.js  MoneroCPUSettingsWizardSecondPage.js  config.js  validate.js
gui/app/components/settings/MoneroNVIDIA/: CompleteForm.js  CurrentSettings.js  Form.js  config.js
gui/app/containers/: App.js  HomePage.js  MoneroCPUSettingsPage.js  MoneroNVIDIASettingsPage.js  SettingsPage.js
gui/app/reducers/: connected.js  miner.js  reply.js
gui/app/rpc/: command_pb.js  messages_pb.js  miner_grpc_pb.js  miner_pb.js  xmr_pb.js
gui/exec/: config.txt  instamine_miner_process_xmr_nvidia.exp  instamine_miner_process_xmr_nvidia.lib  miner_process_xmr_nvidia.exp  miner_process_xmr_nvidia.lib  output.txt
miner/common/: .CMakeLists.txt.un~  CMakeLists.txt  CMakeLists.txt~
miner/include/: fs.h  helper.h  ipc_message.h  reporter.h  shared.h  utils.h  utils_h.h
miner/include/types/: command.pb.cc  command.pb.h  messages.pb.cc  messages.pb.h  miner.grpc.pb.cc  miner.grpc.pb.h  miner.pb.cc  miner.pb.h  xmr.pb.cc  xmr.pb.h
miner/server/: .build.bat.un~  CMakeLists.txt  build.bat  build.bat~  build_new.bat  miner_process.cpp  miner_process_xmr_cpu.cpp  miner_process_xmr_nvidia.cpp  process_manager.h  server.cpp  test1.cpp  test2.cpp  xmr.cpp
miner/server/miners/: miner.h  xmr.h  xmr_cpu.h  xmr_nvidia.h
miner/xmr/xmr-stak-cpu/: CMakeLists.txt  config.txt  donate-level.h  executor.cpp  executor.h  fs.cpp  fs.h  jconf.cpp  jconf.h  msgstruct.h  reporter.h  runner.bat  utils.h
miner/xmr/xmr-stak-cpu/_builds/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  xmr-stak-c.vcxproj  xmr-stak-c.vcxproj.filters  xmr-stak-cpu-lib.vcxproj  xmr-stak-cpu.sln  xmr-stak-cpu.vcxproj  xmr-stak-cpu.vcxproj.filters
miner/xmr/xmr-stak-cpu/_builds/Release/: xmr-stak-c.lib  xmr-stak-cpu-lib.lib
miner/xmr/xmr-stak-cpu/_builds/_3rdParty/Hunter/: install-root-dir
miner/xmr/xmr-stak-cpu/_builds/_3rdParty/Hunter/config-id/: config.cmake
miner/xmr/xmr-stak-cpu/_builds/_3rdParty/Hunter/toolchain/: toolchain.info
miner/xmr/xmr-stak-cpu/_builds/_3rdParty/Hunter/toolchain/_builds/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  HunterToolchain.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
miner/xmr/xmr-stak-cpu/_builds/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  custombuild.write.1.tlog
miner/xmr/xmr-stak-cpu/_builds/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
miner/xmr/xmr-stak-cpu/_builds/xmr-stak-c.dir/Release/xmr-stak-c.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  lib.command.1.tlog
miner/xmr/xmr-stak-cpu/_builds/xmr-stak-cpu-lib.dir/Release/xmr-stak-cpu-lib.tlog/: CL.command.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  custombuild.command.1.tlog  lib.command.1.tlog
miner/xmr/xmr-stak-cpu/_builds/xmr-stak-cpu.dir/Release/xmr-stak-cpu.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
miner/xmr/xmr-stak-dep/hwloc/lib/: libhwloc.lib
miner/xmr/xmr-stak-dep/libmicrohttpd/lib/: libmicrohttpd.lib
miner/xmr/xmr-stak-dep/openssl/lib/: libeay32.exp  libeay32.lib  ssleay32.exp  ssleay32.lib
miner/xmr/xmr-stak-nvidia/: .gitignore  CMakeLists.txt  cli-miner.cpp  config.txt  donate-level.h  executor.cpp  executor.h  jconf.cpp  jconf.h  msgstruct.h  reporter.cpp
types/: .generate_src.bat.un~  command.proto  generate_src.bat  messages.proto  miner.proto  xmr.proto
